--- a/main/core/Resources/less/layout/form/fields/editor.less
+++ b/main/core/Resources/less/layout/form/fields/editor.less
@@ -11,11 +11,9 @@
         border: none;
         top: -8px;
         right: -8px;
-        z-index: 1;
         line-height: 1;
         background-color: white;
         border-radius: 50%;
-        color: #777;
-        font-size: 18px;
+        font-size: @font-size-large;
     }
 }
