--- a/main/core/Resources/less/layout/form/index.less
+++ b/main/core/Resources/less/layout/form/index.less
@@ -191,7 +191,7 @@
     display: block;
     right: 45px;
     bottom: 30px;
-    z-index: @zindex-modal-background - 1;
+    z-index: @zindex-dropdown - 1;
 
     .btn {
         width: 72px;
