--- a/main/core/Resources/less/layout/pages.less
+++ b/main/core/Resources/less/layout/pages.less
@@ -18,6 +18,8 @@
 }
 
 .page-header {
+    // this is to make box shadow of page-header and footer appear over content with bg. I should find a better way to handle it (without z-index)
+    z-index: 2;
     position: relative;
     display: flex;
     align-items: flex-end;
@@ -30,8 +32,6 @@
     margin: 0;
     border-bottom: none;
     .box-shadow(0 2px 2px rgba(0,0,0,.15));
-    // this is to make box shadow appear over content with bg. I should find a better way to handle it (without z-index)
-    z-index: 1;
 
     .page-title {
         order: 1;
@@ -184,6 +184,8 @@
 }
 
 .page-content {
+    // this is to make box shadow of page-header and footer appear over content with bg. I should find a better way to handle it (without z-index)
+    z-index: 1;
     position: relative;
     display: flex;
     flex-direction: column;
