--- a/main/core/Resources/less/themes/default/variables.less
+++ b/main/core/Resources/less/themes/default/variables.less
@@ -238,7 +238,6 @@
 // Footer
 // ---
 
-@footer-height:             floor(@line-height-base*@font-size-base + 2*@padding-base-vertical + 2px); // the size of the locale button
 @footer-max-width:          none; // max width for the footer content (do not affect footer container)
 @footer-bg:                 #F3F3F3;
 @footer-color:              @gray-light;
